feat: 短视频评论

--- a/pages/subpages/home/video/index.wxml
+++ b/pages/subpages/home/video/index.wxml
@@ -16,7 +16,7 @@
 </view>
 
 <view class="bottom-bar row">
-  <view class="input-btn row">说点什么...</view>
+  <view class="input-btn row" bindtap="showInputModal">说点什么...</view>
   <image class="at-icon" src="./images/at.png" />
 </view>
 
