--- a/pages/subpages/home/video/index.wxml
+++ b/pages/subpages/home/video/index.wxml
@@ -20,7 +20,7 @@
   <image class="at-icon" src="./images/at.png" />
 </view>
 
-<comment-popup wx:if="{{commentPopupVisible}}" videoId="{{videoList[curVideoIdx].id}}" bind:hide="hideModal" />
+<comment-popup wx:if="{{commentPopupVisible}}" videoId="{{videoList[curVideoIdx].id}}" />
 <input-modal id="inputModal" wx:if="{{inputModalVisible}}" videoId="{{videoId}}" commentId="{{commentId}}" />
-<feature-popup wx:if="{{featurePopupVisible}}" videoId="{{videoList[curVideoIdx].id}}" bind:hide="hideModal" />
+<feature-popup wx:if="{{featurePopupVisible}}" videoId="{{videoList[curVideoIdx].id}}" />
 <share-popup wx:if="{{sharePopupVisible}}" videoInfo="{{videoList[curVideoIdx]}}" bind:hide="hideModal" />
