--- a/pages/subpages/home/video/index.wxss
+++ b/pages/subpages/home/video/index.wxss
@@ -5,7 +5,7 @@ page {
 .video-swiper {
   position: fixed;
   width: 100vw;
-  height: calc(100vh - 50px - env(safe-area-inset-bottom));
+  height: calc(100vh - 108rpx - env(safe-area-inset-bottom));
 }
 
 .back-icon-wrap {
@@ -17,21 +17,16 @@ page {
 .bottom-bar {
   position: fixed;
   bottom: 0;
-  padding: 10px 12px calc(10px + env(safe-area-inset-bottom));
+  padding: 20rpx 24rpx calc(20rpx + env(safe-area-inset-bottom));
   width: 100vw;
   background: #141414;
 }
 .input-btn {
-  padding: 0 12px;
+  padding: 0 24rpx;
   flex: 1;
-  height: 30px;
+  height: 68rpx;
   color: #fff;
-  font-size: 12px;
-  border-radius: 15px;
+  font-size: 26rpx;
+  border-radius: 12rpx;
   background: #434343;
-}
-.at-icon {
-  margin-left: 12px;
-  width: 20px;
-  height: 20px;
 }
