--- a/components/comment-popup/index.wxss
+++ b/components/comment-popup/index.wxss
@@ -52,16 +52,10 @@
   border-top: 0.5px solid #E8E8E8;
 }
 .input-main {
-  display: flex;
-  align-items: center;
-  padding-left: 20rpx;
-  padding-right: 30rpx;
-  height: 80rpx;
+  padding: 0 24rpx;
+  height: 68rpx;
+  color: #333;
+  font-size: 26rpx;
   background: #F7F7F7;
   border-radius: 12rpx;
-}
-.desc {
-  flex: 1;
-  color: #333;
-  font-size: 30rpx;
 }
