--- a/pages/subpages/home/media/video/index.wxml
+++ b/pages/subpages/home/media/video/index.wxml
@@ -17,10 +17,11 @@
 
 <view class="bottom-bar row">
   <view class="input-btn row" bindtap="showInputModal">说点什么...</view>
-  <!-- <image class="at-icon" src="./images/at.png" /> -->
 </view>
 
+<modal-mask wx:if="{{inputPopupVisible}}" opcity="{{0}}" catchtap="hideModal" />
+<input-popup wx:if="{{inputModalVisible}}" videoId="{{videoId}}" commentId="{{commentId}}" />
+
 <comment-popup wx:if="{{commentPopupVisible}}" videoId="{{videoList[curVideoIdx].id}}" bind:hide="hideCommentPopup" />
-<input-modal id="inputModal" wx:if="{{inputModalVisible}}" videoId="{{videoId}}" commentId="{{commentId}}" />
 <feature-popup wx:if="{{featurePopupVisible}}" videoId="{{videoList[curVideoIdx].id}}" />
 <share-popup wx:if="{{sharePopupVisible}}" videoInfo="{{videoList[curVideoIdx]}}" bind:hide="hideModal" />
