feat: 短视频评论

--- a/pages/subpages/home/media/components/comment-popup/components/comment-item/index.wxml
+++ b/pages/subpages/home/media/components/comment-popup/components/comment-item/index.wxml
@@ -11,7 +11,7 @@
       <view class="comment">{{item.content}}</view>
       <view class="date">
         <text>{{TIME.transform(item.createdAt, 'YYYY-MM-DD')}}</text>
-        <text style="margin-left: 20rpx;" wx:if="{{isReply}}" catchtap="reply">回复</text>
+        <text style="margin-left: 20rpx;" wx:if="{{!isReply}}" catchtap="reply">回复</text>
       </view>
     </view>
   </view>
