feat: 短视频评论

--- a/pages/subpages/home/media/components/comment-popup/components/comment-item/index.wxml
+++ b/pages/subpages/home/media/components/comment-popup/components/comment-item/index.wxml
@@ -6,12 +6,15 @@
     <view class="list-content">
       <view class="row">
         <view class="user-name">{{item.userInfo.nickname}}</view>
-        <view class="author-icon" wx:if="{{item.userInfo.id === authorId}}">作者</view>
+        <view class="author-icon row" wx:if="{{item.userInfo.id === authorId}}">作者</view>
       </view>
       <view class="comment">{{item.content}}</view>
-      <view class="date">
-        <text>{{TIME.transform(item.createdAt, 'YYYY-MM-DD')}}</text>
-        <text style="margin-left: 20rpx;" wx:if="{{!isReply}}" catchtap="reply">回复</text>
+      <view class="row between">
+        <view class="date">
+          <text>{{TIME.transform(item.createdAt, 'YYYY-MM-DD')}}</text>
+          <text class="reply-btn" wx:if="{{!isReply}}" catchtap="reply">回复</text>
+        </view>
+        <image class="delete-icon" wx:if="{{userInfo.id === item.userInfo.id}}" catchtap="delete" src="./images/delete.png" />
       </view>
     </view>
   </view>
