--- a/pages/subpages/home/media/components/comment-popup/components/comment-item/index.wxss
+++ b/pages/subpages/home/media/components/comment-popup/components/comment-item/index.wxss
@@ -1,5 +1,5 @@
 .comment-item {
-  padding: 10rpx 20rpx;
+  padding: 12rpx 24rpx;
 }
 .comment-item.is-reply {
   margin-top: 10rpx;
@@ -7,7 +7,7 @@
 }
 .main {
   display: flex;
-  padding: 10rpx;
+  /* padding: 10rpx; */
 }
 
 .user-avatar {
@@ -64,5 +64,5 @@
 }
 
 .slot-wrap {
-  padding-left: 74rpx;
+  padding-left: 80rpx;
 }
