feat: 短视频评论

--- a/pages/subpages/home/media/components/comment-popup/index.wxml
+++ b/pages/subpages/home/media/components/comment-popup/index.wxml
@@ -35,9 +35,9 @@
           isReply
           bind:delete="delete"
         />
-        <view class="spread-btn row" wx:if="{{item.repliesCount}}" bindtap="toggleRepliesVisible" data-index="{{index}}">
+        <view class="replies-btn row"  bindtap="toggleRepliesVisible" data-index="{{index}}">
           <text>{{(item.repliesCount > item.replies.length || !item.repliesVisible) ? ('展开' + (!item.repliesVisible ? item.repliesCount : (item.repliesCount - item.replies.length)) + '条回复') : '收起'}} </text>
-          <image class="spread-icon" src="{{(item.repliesCount > item.replies.length || !item.repliesVisible) ? './images/down-arrow.png' : './images/up-arrow.png'}}" />
+          <image class="arrow-icon" src="{{(item.repliesCount > item.replies.length || !item.repliesVisible) ? './images/down-arrow.png' : './images/up-arrow.png'}}" />
         </view>
       </comment-item>
       <view class="nomore-tips" wx:if="{{finished}}">——暂时没有更多了——</view>
