feat: 短视频评论

--- a/pages/subpages/home/media/components/comment-popup/index.wxml
+++ b/pages/subpages/home/media/components/comment-popup/index.wxml
@@ -56,5 +56,5 @@
   videoId="{{videoId}}" 
   commentId="{{commentId}}" 
   nickname="{{nickname}}" 
-  bind:hide="hideInputModal"
+  bind:finish="finishComment"
 />
