--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -74,21 +74,21 @@
                 <text>游记</text>
               </button>
             </view>
-            <fall-flow class="fall-flow-1" list="{{noteList}}" generic:item="note-item" bind:finish="setWrapHeight" />
+            <fall-flow class="fall-flow-1" list="{{noteList}}" mediaScene="{{3}}" generic:item="note-item" bind:finish="setWrapHeight" />
             <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="暂无游记作品，快去发布吧～" height="520rpx" />
             <view class="no-more-tips" wx:if="{{noteFinished && noteList.length}}">～没有更多了～</view>
           </view>
         </swiper-item>
         <swiper-item>
           <view class="content-wrap">
-            <fall-flow class="fall-flow-2" list="{{collectMediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
+            <fall-flow class="fall-flow-2" list="{{collectMediaList}}" mediaScene="{{4}}" generic:item="media-item" bind:finish="setWrapHeight" />
             <empty-illus wx:if="{{collectFinished && !collectMediaList.length}}" desc="您还未收藏任何作品" height="680rpx" />
             <view class="no-more-tips" wx:if="{{collectFinished && collectMediaList.length}}">～没有更多了～</view>
           </view>
         </swiper-item>
         <swiper-item>
           <view class="content-wrap">
-            <fall-flow class="fall-flow-3" list="{{likeMediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
+            <fall-flow class="fall-flow-3" list="{{likeMediaList}}" mediaScene="{{5}}" generic:item="media-item" bind:finish="setWrapHeight" />
             <empty-illus wx:if="{{likeFinished && !likeMediaList.length}}" desc="您还未点赞任何作品" height="680rpx" />
             <view class="no-more-tips" wx:if="{{likeFinished && likeMediaList.length}}">～没有更多了～</view>
           </view>
