--- a/pages/subpages/mine/create-note/index.wxss
+++ b/pages/subpages/mine/create-note/index.wxss
@@ -16,10 +16,12 @@
 }
 
 .title-textarea {
-  margin-right: 24rpx;
-  flex: 1;
+  margin-top: 24rpx;
+  padding: 24rpx;
   color: #333;
   line-height: 1.5;
+  border: 1px solid #e6e6e6;
+  border-radius: 16rpx;
 }
 .length-desc {
   position: absolute;
@@ -86,6 +88,7 @@
   font-size: 32rpx;
   border-radius: 44rpx;
   background: #DEDEDE;
+  z-index: 100;
 }
 .publish-btn.active {
   background: #161F4E;
