--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -11,8 +11,8 @@
   <view class="title omit">{{item.title}}</view>
   <view class="info-wrap">
     <view class="author-info">
-      <image class="avatar avatar-default" src="{{item.authorInfo.avatar}}" />
-      <text class="name omit single-line">{{item.authorInfo.nickname}}</text>
+      <image class="author-avatar avatar-default" src="{{item.authorInfo.avatar}}" />
+      <text class="author-name omit single-line">{{item.authorInfo.nickname}}</text>
     </view>
     <view class="praise-info">
       <image class="praise-icon" src="/images/heart.png" />
