--- a/pages/subpages/home/media/note/components/note-item/index.wxml
+++ b/pages/subpages/home/media/note/components/note-item/index.wxml
@@ -1,57 +1,54 @@
 <wxs module="STRING" src="/utils/filters/string.wxs" />
+<wxs module="TIME" src="/utils/filters/time.wxs" />
 
 <view class="note-item">
   <view class="author-info-wrap">
-    <image class="author-avatar" src="http://img.ubo.vip/youlian/temporary/avatar_2.png" />
+    <image class="author-avatar" src="{{item.authorInfo.avatar}}" />
     <view class="name-wrap">
-      <view class="author-name">小鱼儿用户</view>
-      <view class="time">2021-12-12</view>
+      <view class="author-name">{{item.authorInfo.nickname}}</view>
+      <view class="time">{{TIME.transform(item.createdAt, 'YYYY-MM-DD')}}</view>
     </view>
-    <view class="follow-btn" bindtap="follow">+ 关注</view>
+    <view class="follow-btn" wx:if="{{item.isFollow}}" bindtap="follow">+ 关注</view>
   </view>
   
   <swiper class="note-imgs small-dots" indicator-dots circular>
-    <swiper-item wx:for="{{imgs}}" wx:key="index">
-      <image class="note-img" src="{{item}}" bindtap="previewImage" data-current="{{item}}" mode="aspectFill" lazy-load />
+    <swiper-item wx:for="{{item.imageList}}" wx:key="index" wx:for-item="image">
+      <image class="note-img" src="{{image}}" bindtap="previewImage" data-current="{{image}}" mode="aspectFill" lazy-load />
     </swiper-item>
   </swiper>
   
   <view class="content">
-    <text>{{contentFold ? STRING.slice(content, 50) : content}}</text>
+    <text>{{contentFold ? STRING.slice(item.content || '', 50) : item.content}}</text>
     <text wx:if="{{contentFold}}" style="color: #000; font-weight: bold;"> 展开</text>
   </view>
   
-  <view class="comment-wrap">
+  <view class="comment-wrap" wx:if="{{item.commentsNumber}}">
     <view class="comment-list">
-      <view class="comment-item">
-        <view class="commentator-name">funguy：</view>
-        <view class="comment-content omit single-line">我也想去自驾～</view>
-      </view>
-      <view class="comment-item">
-        <view class="commentator-name">一朵花：</view>
-        <view class="comment-content omit single-line">不知道网上能不能买到差不多的</view>
+      <view class="comment-item" wx:for="{{item.commentList}}" wx:key="index" wx:for-item="comment">
+        <view class="commentator-name">{{comment.nickname}}：</view>
+        <view class="comment-content omit single-line">{{comment.content}}</view>
       </view>
     </view>
-    <view class="explain">共5条评论</view>
+    <view class="explain">共{{item.commentsNumber}}条评论</view>
   </view>
   
   <view class="btn-wrap">
-    <view class="comment-btn">
-      <image class="user-avatar" src="/images/default-avatar.png" />
+    <view class="comment-btn" bindtap="">
+      <image class="user-avatar avatar-default" src="{{userInfo.avatar}}" />
       <view class="comment-btn-desc">添加评论...</view>
     </view>
     <view class="other-btns">
       <view class="btn-item">
-        <image class="btn-icon" src="/images/share.png" />
-        <view class="btn-data">72</view>
+        <image class="btn-icon" src="./images/share.png" />
+        <view class="btn-data">{{item.shareTimes}}</view>
       </view>
       <view class="btn-item">
-        <image class="btn-icon" src="/images/heart.png" />
-        <view class="btn-data">200</view>
+        <image class="btn-icon" src="./images/heart{{item.isLike ? '-active' : ''}}.png" />
+        <view class="btn-data">{{item.likeNumber}}</view>
       </view>
       <view class="btn-item">
-        <image class="btn-icon" src="/images/collection-active.png" />
-        <view class="btn-data">200</view>
+        <image class="btn-icon" src="./images/collection{{item.isCollected ? '-active' : ''}}.png" />
+        <view class="btn-data">{{item.collectionTimes}}</view>
       </view>
     </view>
   </view>
